k8s/strapi/strapi-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
        app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
      - name: strapi
        image: strapi/strapi
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1337
          protocol: TCP
