k8s/strapi/strapi-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-svc
  labels:
    app: strapi
spec:

  ports:
  - port: 1337
    targetPort: 1337
    protocol: TCP
    name: strapi
  selector:
    app: strapi
