k8s/strapi/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: strapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"


spec:
  tls:
  - hosts:
    - redestp6.com
    secretName:
      tp6-cert
  rules:
  - host: redestp6.com
    http:
      paths:
        - path: /
          backend:
            serviceName: strapi-svc
            servicePort: 1337
